--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@ const erros = [
   {cod:"E806/E806", desc:"Falha no feedback de voltagem do motor"},
   {cod:"E017/E027/E047", desc:"Falha na consistência da voltagem do motor"},
   {cod:"E087/E107/E207", desc:"Falha no relé do motor"},
-  {cod:"E407/E407", desc:"Falha na consistência da alimentação do atuador"}
+  {cod:"E407/E407", desc:"Falha na consistência da alimentação do atuador"},
+{cod:"NENHUMA DAS OPÇÕES LISTADAS", desc:"Solicite a troca do veículo imediatamente."}
 ];
 
 function showErros(){
@@ -181,6 +182,7 @@ Erros: ${respostas.erros.join('; ')}
 </script>
 </body>
 </html>
+
 
 
 
