--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     padding:18px;
     box-sizing:border-box;
     /* logo de fundo (marca d'água) */
-    background-image: url('logo novo.jpg');
+    background-image: url('logotipo novo.jpg');
     background-repeat:no-repeat;
     background-position:center top;
     background-size: 600px auto;
@@ -370,6 +370,7 @@ const respostas = { erros: [], modelo:null, problema:null, resolvido:null };
 </script>
 </body>
 </html>
+
 
 
 
