--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('logo-bg.jpeg') no-repeat center center fixed;
+      background: url('logotipo empresa.jpg') no-repeat center center fixed;
       background-size: contain;
       background-color: #f5f5f5;
       color: #333;
@@ -68,6 +68,55 @@
       color: #aaa;
     }
 
+    .hidden {
+      display: none;
+    }
+
+    .vehicle-section h3 {
+      text-align: center;
+      font-size: 1.8em;
+      margin-top: 40px;
+      color: #003366;
+    }
+
+    .button-group {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    .vehicle-button {
+      padding: 10px 20px;
+      background-color: #003366;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1em;
+    }
+
+    .vehicle-button:hover {
+      background-color: #005599;
+    }
+
+    .problem-input {
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    textarea {
+      width: 80%;
+      max-width: 500px;
+      height: 100px;
+      padding: 10px;
+      font-size: 1em;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      resize: none;
+    }
+
     footer {
       text-align: center;
       margin-top: 50px;
@@ -76,8 +125,7 @@
     }
 
     footer img {
-      max-height: 60px;
-      opacity: 0.8;
+      max-height: 40px;
     }
   </style>
 </head>
@@ -97,10 +145,52 @@
       <input type="text" id="patrimonio" placeholder="por exemplo 0123">
     </div>
 
+    <!-- Seção 02 -->
+    <div id="vehicleSection" class="vehicle-section hidden">
+      <h3>Qual o modelo do veículo?</h3>
+      <div class="button-group">
+        <button class="vehicle-button" onclick="selectModel('i2-X2')">i2-X2</button>
+        <button class="vehicle-button" onclick="selectModel('i3-X3')">i3-X3</button>
+        <button class="vehicle-button" onclick="selectModel('S6')">S6</button>
+        <button class="vehicle-button" onclick="selectModel('S8-R8-BR8')">S8-R8-BR8</button>
+        <button class="vehicle-button" onclick="selectModel('H9-H9X')">H9-H9X</button>
+        <button class="vehicle-button" onclick="selectModel('S9-S9X')">S9-S9X</button>
+        <button class="vehicle-button" onclick="selectModel('S10-S10X')">S10-S10X</button>
+      </div>
+
+      <div id="problemInput" class="problem-input hidden">
+        <h3>Qual o problema descrito no chamado ou informado pelo cliente?</h3>
+        <textarea id="problema" placeholder="Descreva aqui o problema..."></textarea>
+      </div>
+    </div>
+
     <footer>
-      <img src="logo-footer.jpeg" alt="Logo BRMobility">
+      <img src="logotipo empresa.jpg" alt="Logo BRMobility">
     </footer>
   </div>
+
+  <script>
+    const chamado = document.getElementById('chamado');
+    const posto = document.getElementById('posto');
+    const patrimonio = document.getElementById('patrimonio');
+    const vehicleSection = document.getElementById('vehicleSection');
+    const problemInput = document.getElementById('problemInput');
+
+    function checkInputs() {
+      if (chamado.value.trim() && posto.value.trim() && patrimonio.value.trim()) {
+        vehicleSection.classList.remove('hidden');
+      }
+    }
+
+    chamado.addEventListener('input', checkInputs);
+    posto.addEventListener('input', checkInputs);
+    patrimonio.addEventListener('input', checkInputs);
+
+    function selectModel(modelo) {
+      sessionStorage.setItem('modeloVeiculo', modelo);
+      problemInput.classList.remove('hidden');
+    }
+  </script>
 </body>
 </html>
 
