--- a/index.html
+++ b/index.html
@@ -349,11 +349,11 @@
         <h2 style="margin:0 0 8px 0;">Enviar via WhatsApp</h2>
         <div class="contacts">
           <button class="contact-btn" id="btn-vanessa">
-            <img class="contact-img" src="vanessa_logo.jpg" alt="Vanessa" />
+            <img class="contact-img" src="logotipo vanessa.jpg" alt="Vanessa" />
             Analista de Relacionamento<br/>Vanessa Rodrigues<br/><small>+55 11 98947-7808</small>
           </button>
           <button class="contact-btn" id="btn-willian">
-            <img class="contact-img" src="willianlogo.jpg" alt="Willian" />
+            <img class="contact-img" src="logotipo willian.jpg" alt="Willian" />
             Analista de Relacionamento<br/>Willian Bertuzzi<br/><small>+55 11 95654-4217</small>
           </button>
         </div>
@@ -364,7 +364,7 @@
 
     <!-- Footer with large logo spanning mobile width -->
     <footer class="site-footer" id="site-footer">
-      <img src="logo_novo.jpg" alt="BRMobility" />
+      <img src="logotipo empresa.jpg" alt="BRMobility" />
     </footer>
 
   </div>
@@ -968,3 +968,4 @@
   </script>
 </body>
 </html>
+
