--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
         <div class="alert">⚠ Esse site não deve ser compartilhado com clientes ou externos.</div>
 
         <div style="margin-top:12px; display:flex; flex-direction:column; gap:10px; max-width:640px; margin-left:auto; margin-right:auto;">
-          <input id="field-chamado" type="text" placeholder="Número do chamado (ex: 20991)" autocomplete="off" />
-          <input id="field-posto" type="text" placeholder="Nome do posto" autocomplete="off" />
-          <input id="field-patrimonio" type="text" placeholder="Número do patrimônio" autocomplete="off" />
+          <input id="field-chamado" type="text" placeholder="Escreva aqui o número do chamado" autocomplete="off" />
+          <input id="field-posto" type="text" placeholder="Escreva aqui o nome do posto" autocomplete="off" />
+          <input id="field-patrimonio" type="text" placeholder="Escreva aqui o número do patrimônio" autocomplete="off" />
           <div class="small">Preencha os três campos para prosseguir.</div>
           <button id="btn-to-model" class="btn" style="display:none;">Próximo: Modelo do veículo</button>
         </div>
@@ -884,5 +884,6 @@ function renderList(id, items, handler){
 </script>
 </body>
 </html>
+
 
 
