--- a/index.html
+++ b/index.html
@@ -600,48 +600,32 @@ function buildWhatsText(){
 }
 
 async function sendWhats(number){
-  // Atualiza state com valores atuais
+
+  // Atualiza dados atuais
   state.chamado = el('field-chamado').value.trim();
   state.posto = el('field-posto').value.trim();
   state.patrimonio = el('field-patrimonio').value.trim();
   state.descricao = el('field-descricao').value.trim();
-  state.customDescribe = (el('i2-custom') && el('i2-custom').value.trim()) || 
-                         (el('i3-custom') && el('i3-custom').value.trim()) || 
-                         (el('s6-custom') && el('s6-custom').value.trim()) || 
-                         (el('s8-custom') && el('s8-custom').value.trim()) || 
-                         (el('s9-custom') && el('s9-custom').value.trim()) || 
-                         (el('s10-custom') && el('s10-custom').value.trim()) || 
-                         (el('h9-custom') && el('h9-custom').value.trim()) || 
-                         state.customDescribe || '';
-  state.finalExtra = el('field-final-extra').value.trim() || state.finalExtra;
+  state.finalExtra = el('field-final-extra').value.trim();
 
   const text = buildWhatsText();
-  const whatsappURL = 'https://wa.me/' + number + '?text=' + encodeURIComponent(text);
 
-  // Se tem imagens e o navegador suporta Web Share
-  if(state.files && state.files.length > 0){
-    try{
-      if(navigator.canShare && navigator.canShare({ files: state.files })){
-        await navigator.share({ 
-          files: state.files, 
-          text: text, 
-          title: 'Chamado BRMobility' 
-        });
+  let whatsappURL = '';
 
-        // Após compartilhar, redireciona direto para o contato
-        setTimeout(()=> {
-          window.location.href = whatsappURL;
-        }, 500);
-
-        return;
-      }
-    } catch(err){
-      console.warn('Erro no Web Share API:', err);
-    }
+  // Vanessa
+  if(number === '5511989477808'){
+    whatsappURL = 'https://api.whatsapp.com/send?phone=5511989477808&text=' + encodeURIComponent(text);
   }
 
-  // Redireciona direto para a conversa específica
+  // Willian
+  if(number === '5511956544217'){
+    whatsappURL = 'https://api.whatsapp.com/send?phone=5511956544217&text=' + encodeURIComponent(text);
+  }
+
+  // Redireciona DIRETO para a conversa
   window.location.href = whatsappURL;
+}
+
 }
 function evaluateFinal(){
   state.chamado = el('field-chamado').value.trim();
@@ -662,4 +646,5 @@ function reattachListeners(){
 </body>
 </html>
 </html>
+
 
